--- a/index.html
+++ b/index.html
@@ -1,3 +1,202 @@
-Welcome to my site...
-<br>
-The coming soon page is, well, coming soon.. :P
+<html>
+<head>
+    <title>Ashwin</title>
+    <meta name=viewport content="width=device-width, initial-scale=1"> 
+    <script src="js/jquery.2.0.3.js"></script>
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/bootstrap-select.min.css">
+    <link rel="stylesheet" href="css/style.css">
+    <!--Font-Awesome-->
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/bootstrap-select.min.js"></script>
+    <script src="js/smoothscroll.js"></script>
+    <!--scrollmagic-->
+    <script type="text/javascript" src="js/smagic/TweenMax.min.js"></script>
+    <script type="text/javascript" src="js/smagic/jquery.scrollmagic.js"></script>
+    <script type="text/javascript" src="js/smagic/jquery.scrollmagic.debug.js"></script>
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+    <script>
+      var controller;
+      $(document).ready(function($) {
+          // init controller
+          controller = new ScrollMagic();
+      });
+    </script>
+    <script type="text/javascript" src="js/animation.js"></script>
+</head>
+<body id="body">
+
+  <div class="jumbo1 jumbotron">
+    <div class="container">
+      <div class="section1 text-center">
+        <span class="sec1-hd">Hi, I'm Ashwin</span>
+        <br>
+        <img src="img/ashwin.png" class="img-circle img-thumbnail" id="myimg">
+        <img src="img/yup.png" class="arrow">
+        <br><br>
+        <span class="sec1-hd2">Developer at</span><img src="img/icons/foofys.png" class="foo">
+      </div>
+    </div>
+  </div>
+
+  <div class="jumbo2 jumbotron">
+    <div class="container">
+      <div class="section2 text-center">
+        <span class="sec2-hd" id="sec2-txt1">I </span>
+        <span class="sec2-hd" id="sec2-txt2"> <i class="fa fa-heart"></i> </span>
+        <span class="sec2-hd" id="sec2-txt3"> Developing</span><br>
+        <span class="sec2-hd" id="sec2-txt4">Simple and Elegant Websites</span>
+        <br><br><br>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="jumbo3 jumbotron">
+    <div class="container">
+      <div class="section3">
+        <center>
+          <span class="sec3-hd" id="sec3-hd">Some of my Latest work</span>  
+          <br><br><br><br>
+        </center>
+        <div class="row" id="box1">
+          <div class="col-md-myoffset-1 col-sm-2">
+            <a href="http://bribeme.foofys.com" target="_blank">
+              <img src="img/port/briibe.png" class="port-img" style="width:70%;margin-top: 10px;">
+            </a>
+          </div>
+          <div class="col-sm-2" style="text-align:center;">
+            <a href="http://www.lekaraao.com" target="_blank">
+              <img src="img/port/lekar.png" class="port-img" style="width: 70%;margin-top: 0px;">
+            </a>
+          </div>
+          <div class="col-sm-2">
+            <img src="img/port/mitituti.png" class="port-img" style="margin-top:10px;">
+          </div>
+          <div class="col-sm-2">
+            <a href="http://www.bohrabros.com" target="_blank">
+              <img src="img/port/bo.png" class="port-img" style="margin-top: 25px;">
+            </a>
+          </div>
+          <div class="col-sm-2">
+            <a href="http://www.realiz3d.in" target="_blank">
+              <img src="img/port/realize.png" class="port-img" style="margin-top:18px;">
+            </a>
+          </div>
+        </div>
+
+        <br><br><br> 
+
+        <div class="row" id="box2">
+          <div class="col-md-myoffset-1 col-sm-2">
+            <a href="http://www.pranahealthcare.co.in" target="_blank">
+              <img src="img/port/prana.png" class="port-img" style="">
+            </a>
+          </div>
+          <div class="col-sm-2" style="text-align:center;">
+            <a href="http://www.bluesaint.in" target="_blank">
+              <img src="img/port/bs.png" class="port-img" style="margin-top: -2px;width: 80%;">
+            </a>
+          </div>
+          <div class="col-sm-2" style="text-align:center;">
+            <a href="http://www.dntsnoop.me" target="_blank">
+              <img src="img/port/snoop.png" class="port-img" style="margin-top: -15px;">
+            </a>
+          </div>
+          <div class="col-sm-2" style="text-align:center;">
+            <a href="http://www.cincoceibas.com" target="_blank">
+              <img src="img/port/cinco.jpg" class="port-img" style="margin-top: -12px;width: 70%;">
+            </a>
+          </div>
+          <div class="col-sm-2">
+            <a href="http://www.dntsnoop.me" target="_blank">
+              <img src="img/port/garage.png" class="port-img" style="margin-top:-20px;">
+            </a>
+          </div>
+        </div>
+
+        <br><br><br> 
+
+        <div class="row" id="box3">
+          <div class="col-md-myoffset-1 col-sm-2">
+            <a href="http://www.spykk.com" target="_blank">
+              <img src="img/port/spykk.png" class="port-img">
+            </a>
+          </div>
+          <div class="col-sm-2" style="text-align:center;">
+            <a href="http://www.foofys.com:8082/" target="_blank">
+              <img src="img/port/yes.png" class="port-img" style="margin-top:-15px;">
+            </a>
+          </div>
+          <div class="col-sm-2" style="text-align:center;">
+            <a href="http://www.chaichun.in" target="_blank">
+              <img src="img/port/chai.png" class="port-img" style="margin-top: 10px;">
+            </a>
+          </div>
+          <div class="col-sm-2" style="text-align:center;">
+            <a href="http://foofys.comxa.com/imperial/" target="_blank">
+              <img src="img/port/imperial.png" class="port-img" style="margin-top: -30px;width: 70%;">
+            </a>
+          </div>
+          <div class="col-sm-2">
+            <a href="http://edugennie.com" target="_blank">
+              <img src="img/port/edu.png" class="port-img" style="margin-top:-15px;">
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="jumbo4 jumbotron">
+    <div class="container">
+      <div class="section4 text-center">
+        <center>
+          <span class="sec3-hd" id="sec4-hd">Chrome Extension</span>  
+          <br><br><br><br>
+        </center>
+        <div class="row">
+          <div class="col-md-offset-1 col-md-5 text-center">
+            <a href="https://chrome.google.com/webstore/detail/clean-chrome/fmldiainnnecolalfmbeajgnhgbaekfa" target="_blank">
+              <img src="img/port/cleanchrome.png" id="ce1">
+            </a>
+          </div>
+          <div class="col-md-4 text-center">
+            <a href="https://chrome.google.com/webstore/detail/aurora-new-tab/likchgbfoehabkijbmdkahdohhdghllo" target="_blank">
+              <img src="img/port/aurora.png" id="ce2">
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="jumbo5 jumbotron">
+    <div class="container">
+      <div class="section5 text-center">
+        <center>
+          <span class="sec5-hd" id="sec5-hd">Get in Touch</span>  
+          <br><br>
+          <a href="https://www.facebook.com/ashwin.k.shenoy" target="_blank">
+            <img src="img/icons/fb.png" id="social1">
+          </a>
+          <a href="https://twitter.com/ashwinkshenoy" target="_blank">
+            <img src="img/icons/tw.png" id="social2">
+          </a>
+          <a href="https://in.linkedin.com/in/ashwinkshenoy" target="_blank">
+            <img src="img/icons/in.png" id="social3">
+          </a>
+        </center>
+      </div>
+    </div>
+  </div>
+
+</body>
+</html>
