new portfolio links

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <title>Ashwin</title>
-    <meta name=viewport content="width=device-width, initial-scale=1"> 
+    <meta name=viewport content="width=device-width, initial-scale=1">
     <script src="js/jquery.2.0.3.js"></script>
     <!-- Bootstrap -->
     <link rel="stylesheet" href="css/bootstrap.css">
@@ -63,7 +63,7 @@
     <div class="container">
       <div class="section3">
         <center>
-          <span class="sec3-hd" id="sec3-hd">Some of my Latest work</span>  
+          <span class="sec3-hd" id="sec3-hd">Some of my Latest work</span>
           <br><br><br><br>
         </center>
         <div class="row" id="box1">
@@ -72,13 +72,15 @@
               <img src="img/port/briibe.png" class="port-img" style="width:70%;margin-top: 10px;">
             </a>
           </div>
-          <div class="col-sm-2" style="text-align:center;">
-            <a href="http://www.lekaraao.com" target="_blank">
-              <img src="img/port/lekar.png" class="port-img" style="width: 70%;margin-top: 0px;">
+          <div class="col-sm-2">
+            <a href="http://www.huzzpa.com" target="_blank">
+              <img src="img/port/huzzpa.png" class="port-img" style="margin-top:10px;">
             </a>
           </div>
-          <div class="col-sm-2">
-            <img src="img/port/mitituti.png" class="port-img" style="margin-top:10px;">
+          <div class="col-sm-2" style="text-align:center;">
+            <a href="http://www.dntsnoop.me" target="_blank">
+              <img src="img/port/snoop.png" class="port-img" style="margin-top: 5px;">
+            </a>
           </div>
           <div class="col-sm-2">
             <a href="http://www.bohrabros.com" target="_blank">
@@ -92,7 +94,7 @@
           </div>
         </div>
 
-        <br><br><br> 
+        <br><br><br>
 
         <div class="row" id="box2">
           <div class="col-md-myoffset-1 col-sm-2">
@@ -106,8 +108,8 @@
             </a>
           </div>
           <div class="col-sm-2" style="text-align:center;">
-            <a href="http://www.dntsnoop.me" target="_blank">
-              <img src="img/port/snoop.png" class="port-img" style="margin-top: -15px;">
+            <a href="http://www.ctod.in" target="_blank">
+              <img src="img/port/ctod.png" class="port-img" style="width: 70%;margin-top: 0px;">
             </a>
           </div>
           <div class="col-sm-2" style="text-align:center;">
@@ -122,7 +124,7 @@
           </div>
         </div>
 
-        <br><br><br> 
+        <br><br><br>
 
         <div class="row" id="box3">
           <div class="col-md-myoffset-1 col-sm-2">
@@ -131,7 +133,7 @@
             </a>
           </div>
           <div class="col-sm-2" style="text-align:center;">
-            <a href="http://www.foofys.com:8082/" target="_blank">
+            <a href="http://www.yesmastr.com" target="_blank">
               <img src="img/port/yes.png" class="port-img" style="margin-top:-15px;">
             </a>
           </div>
@@ -159,7 +161,7 @@
     <div class="container">
       <div class="section4 text-center">
         <center>
-          <span class="sec3-hd" id="sec4-hd">Chrome Extension</span>  
+          <span class="sec3-hd" id="sec4-hd">Chrome Extension</span>
           <br><br><br><br>
         </center>
         <div class="row">
@@ -182,7 +184,7 @@
     <div class="container">
       <div class="section5 text-center">
         <center>
-          <span class="sec5-hd" id="sec5-hd">Get in Touch</span>  
+          <span class="sec5-hd" id="sec5-hd">Get in Touch</span>
           <br><br>
           <a href="https://www.facebook.com/ashwin.k.shenoy" target="_blank">
             <img src="img/icons/fb.png" id="social1">
