--- a/index.html
+++ b/index.html
@@ -186,14 +186,17 @@
         <center>
           <span class="sec5-hd" id="sec5-hd">Get in Touch</span>
           <br><br>
+          <a href="mailto:ashwinkshenoy@gmail.com?subject=Get in touch for a coffee!" target="_blank">
+            <img src="img/icons/mail.png" id="social1" class="social_icon">
+          </a>
           <a href="https://www.facebook.com/ashwin.k.shenoy" target="_blank">
-            <img src="img/icons/fb.png" id="social1">
+            <img src="img/icons/fb.png" id="social2" class="social_icon">
           </a>
           <a href="https://twitter.com/ashwinkshenoy" target="_blank">
-            <img src="img/icons/tw.png" id="social2">
+            <img src="img/icons/tw.png" id="social3" class="social_icon">
           </a>
           <a href="https://in.linkedin.com/in/ashwinkshenoy" target="_blank">
-            <img src="img/icons/in.png" id="social3">
+            <img src="img/icons/in.png" id="social4" class="social_icon">
           </a>
         </center>
       </div>
