new portfolio links

--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
         </center>
         <div class="row" id="box1">
           <div class="col-md-myoffset-1 col-sm-2">
-            <a href="http://bribeme.foofys.com" target="_blank">
-              <img src="img/port/briibe.png" class="port-img" style="width:70%;margin-top: 10px;">
+            <a href="http://www.huzzpa.com" target="_blank">
+              <img src="img/port/huzzpa.png" class="port-img" style="margin-top:10px;">
             </a>
           </div>
           <div class="col-sm-2">
-            <a href="http://www.huzzpa.com" target="_blank">
-              <img src="img/port/huzzpa.png" class="port-img" style="margin-top:10px;">
+            <a href="http://bribeme.foofys.com" target="_blank">
+              <img src="img/port/briibe.png" class="port-img" style="margin-top: 10px;">
             </a>
           </div>
           <div class="col-sm-2" style="text-align:center;">
@@ -113,12 +113,12 @@
             </a>
           </div>
           <div class="col-sm-2" style="text-align:center;">
-            <a href="http://www.cincoceibas.com" target="_blank">
-              <img src="img/port/cinco.jpg" class="port-img" style="margin-top: -12px;width: 70%;">
+            <a href="http://www.getlevo.com" target="_blank">
+              <img src="img/port/levo.png" class="port-img" style="margin-top: -12px;width: 70%;">
             </a>
           </div>
           <div class="col-sm-2">
-            <a href="http://www.dntsnoop.me" target="_blank">
+            <a href="http://www.foofys.com/garage" target="_blank">
               <img src="img/port/garage.png" class="port-img" style="margin-top:-20px;">
             </a>
           </div>
@@ -148,8 +148,8 @@
             </a>
           </div>
           <div class="col-sm-2">
-            <a href="http://edugennie.com" target="_blank">
-              <img src="img/port/edu.png" class="port-img" style="margin-top:-15px;">
+            <a href="http://chalnpaper.com" target="_blank">
+              <img src="img/port/cnp.png" class="port-img" style="margin-top:10px;">
             </a>
           </div>
         </div>
