edited portfolio links

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             </a>
           </div>
           <div class="col-sm-2">
-            <a href="http://chalnpaper.com" target="_blank">
+            <a href="http://chalknpaper.com" target="_blank">
               <img src="img/port/cnp.png" class="port-img" style="margin-top:10px;">
             </a>
           </div>
