Added side nav indications

--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
     });
   </script>
 
+  <div class="dots">
+    <span class="d1">&#9632;</span>
+    <span class="d2">&#9632;</span>
+    <span class="d3">&#9632;</span>
+    <span class="d4">&#9632;</span>
+    <span class="d5">&#9632;</span>
+  </div><!--dots end-->
 
   <div class="jumbo1 jumbotron">
     <div class="container">
