Added New Craft Font

--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@
   <div class="jumbo1 jumbotron">
     <div class="container">
       <div class="section1 text-center">
-        <span class="sec1-hd">Hi, I'm Ashwin</span>
+        <!-- <span class="sec1-hd">Hi, I'm Ashwin</span> -->
+        <span class="sec1-hd">
+          Hi, I'm Ashwin
+        </span>
         <br>
         <img src="img/ashwin.png" class="img-circle img-thumbnail" id="myimg">
         <img src="img/yup.png" class="arrow">
@@ -58,7 +61,7 @@
       <div class="section2 text-center">
         <span class="sec2-hd" id="sec2-txt1">I </span>
         <span class="sec2-hd" id="sec2-txt2"> <i class="fa fa-heart"></i> </span>
-        <span class="sec2-hd" id="sec2-txt3"> Developing</span><br>
+        <span class="sec2-hd craft-txt" id="sec2-txt3">CRAFTING</span><br>
         <span class="sec2-hd" id="sec2-txt4">Simple and Elegant Websites</span>
         <br><br><br>
       </div>
@@ -168,7 +171,7 @@
     <div class="container">
       <div class="section4 text-center">
         <center>
-          <span class="sec3-hd" id="sec4-hd">Chrome Extension</span>
+          <span class="sec3-hd" id="sec4-hd">Chrome Extensions</span>
           <br><br><br><br>
         </center>
         <div class="row">
