Added space div after section6

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
         <div class="section6 text-center">
           <center>
             <span class="sec6-hd" id="sec6-hd">Get in Touch</span>
-            <br><br>
+            <br><br><br>
             <a href="mailto:ashwinkshenoy@gmail.com?subject=Get in touch for a coffee!" target="_blank">
               <img src="img/icons/mail.png" id="social1" class="social_icon">
             </a>
@@ -283,6 +283,7 @@
             </a>
           </center>
         </div><!--section6 end-->
+        <div class="space"></div>
       </div><!--container end-->
     </div><!--jumbo6 end-->
 
