--- a/index.html
+++ b/index.html
@@ -1,21 +1,25 @@
-<html>
+<!--
+
+              .__           .__
+_____    _____|  |____  _  _|__| ____
+\__  \  /  ___/  |  \ \/ \/ /  |/    \
+ / __ \_\___ \|   Y  \     /|  |   |  \
+(____  /____  >___|  /\/\_/ |__|___|  /
+     \/     \/     \/               \/
+
+@ashwinkshenoy
+
+ -->
+
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
   <head>
-    <title>Ashwin</title>
-    <meta name=viewport content="width=device-width, initial-scale=1">
-    <script src="js/jquery.2.0.3.js"></script>
-    <!-- Bootstrap -->
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/bootstrap-select.min.css">
-    <link rel="stylesheet" href="css/style.css">
-    <!--Font-Awesome-->
+    <title>Ashwin K Shenoy</title>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8">
+    <meta name=viewport content="width=device-width, initial-scale=1 ,user-scalable=no">
+    <!-- CSS -->
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/bootstrap-select.min.js"></script>
-    <script src="js/smoothscroll.js"></script>
-    <!--scrollmagic-->
-    <script type="text/javascript" src="js/smagic/TweenMax.min.js"></script>
-    <script type="text/javascript" src="js/smagic/jquery.scrollmagic.js"></script>
-    <script type="text/javascript" src="js/smagic/jquery.scrollmagic.debug.js"></script>
+    <link rel="stylesheet" href="css/style.css">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -24,13 +28,7 @@
     <![endif]-->
   </head>
   <body id="body">
-    <script>
-      var controller;
-      $(document).ready(function($) {
-        // init controller
-        controller = new ScrollMagic();
-      });
-    </script>
+
 
     <div class="dots">
       <span class="d1">&#9632;</span>
@@ -80,27 +78,27 @@
           <div class="row" id="box1">
             <div class="col-md-myoffset-1 col-sm-2">
               <a href="http://www.huzzpa.com" target="_blank">
-                <img src="img/port/huzzpa.png" class="port-img" style="margin-top:10px;">
+                <img src="img/port/huzzpa.png" class="port-img">
               </a>
             </div><!--col-sm-* end-->
             <div class="col-sm-2">
-              <a href="http://bribeme.foofys.com" target="_blank">
-                <img src="img/port/briibe.png" class="port-img" style="margin-top: 10px;">
+              <a href="http://talocity.in" target="_blank">
+                <img src="img/port/talocity.png" class="port-img">
               </a>
             </div><!--col-sm-* end-->
-            <div class="col-sm-2" style="text-align:center;">
+            <div class="col-sm-2 text-center">
               <a href="http://www.dntsnoop.me" target="_blank">
-                <img src="img/port/snoop.png" class="port-img" style="margin-top: 5px;">
+                <img src="img/port/snoop.png" class="port-img">
               </a>
             </div><!--col-sm-* end-->
             <div class="col-sm-2">
-              <a href="http://www.bohrabros.com" target="_blank">
-                <img src="img/port/bo.png" class="port-img" style="margin-top: 25px;">
+              <a href="http://www.mypr.io" target="_blank">
+                <img src="img/port/mypr.png" class="port-img">
               </a>
             </div><!--col-sm-* end-->
             <div class="col-sm-2">
-              <a href="http://www.realiz3d.in" target="_blank">
-                <img src="img/port/realize.png" class="port-img" style="margin-top:18px;">
+              <a href="http://www.foofys.com/garage" target="_blank">
+                <img src="img/port/garage.png" class="port-img">
               </a>
             </div><!--col-sm-* end-->
           </div><!--row end-->
@@ -109,28 +107,28 @@
 
           <div class="row" id="box2">
             <div class="col-md-myoffset-1 col-sm-2">
-              <a href="http://www.pranahealthcare.co.in" target="_blank">
-                <img src="img/port/prana.png" class="port-img" style="">
+              <a href="http://www.spykk.com" target="_blank">
+                <img src="img/port/spykk.png" class="port-img">
               </a>
             </div><!--col-sm-* end-->
-            <div class="col-sm-2" style="text-align:center;">
-              <a href="http://www.bluesaint.in" target="_blank">
-                <img src="img/port/bs.png" class="port-img" style="margin-top: -2px;width: 80%;">
+            <div class="col-sm-2 text-center">
+              <a href="http://www.bohrabros.com" target="_blank">
+                <img src="img/port/bo.png" class="port-img">
               </a>
             </div><!--col-sm-* end-->
-            <div class="col-sm-2" style="text-align:center;">
+            <div class="col-sm-2 text-center">
               <a href="http://www.ctod.in" target="_blank">
-                <img src="img/port/ctod.png" class="port-img" style="width: 70%;margin-top: 0px;">
+                <img src="img/port/ctod.png" class="port-img">
               </a>
             </div><!--col-sm-* end-->
-            <div class="col-sm-2" style="text-align:center;">
+            <div class="col-sm-2 text-center">
               <a href="http://www.getlevo.com" target="_blank">
-                <img src="img/port/levo.png" class="port-img" style="margin-top: -12px;width: 70%;">
+                <img src="img/port/levo.png" class="port-img">
               </a>
             </div><!--col-sm-* end-->
             <div class="col-sm-2">
-              <a href="http://www.foofys.com/garage" target="_blank">
-                <img src="img/port/garage.png" class="port-img" style="margin-top:-20px;">
+              <a href="http://www.hyperlocalleague.in" target="_blank">
+                <img src="img/port/hll.png" class="port-img">
               </a>
             </div><!--col-sm-* end-->
           </div><!--row end-->
@@ -138,29 +136,29 @@
           <br><br><br>
 
           <div class="row" id="box3">
-            <div class="col-md-myoffset-1 col-sm-2">
-              <a href="http://www.spykk.com" target="_blank">
-                <img src="img/port/spykk.png" class="port-img">
+            <div class="col-md-myoffset-1 col-sm-2 text-center">
+              <a href="http://www.pranahealthcare.co.in" target="_blank">
+                <img src="img/port/prana.png" class="port-img" style="">
               </a>
             </div><!--col-sm-* end-->
-            <div class="col-sm-2" style="text-align:center;">
+            <div class="col-sm-2 text-center">
               <a href="http://www.yesmastr.com" target="_blank">
-                <img src="img/port/yes.png" class="port-img" style="margin-top:-15px;">
+                <img src="img/port/yes.png" class="port-img">
               </a>
             </div><!--col-sm-* end-->
-            <div class="col-sm-2" style="text-align:center;">
+            <div class="col-sm-2 text-center">
               <a href="http://www.chaichun.in" target="_blank">
-                <img src="img/port/chai.png" class="port-img" style="margin-top: 10px;">
+                <img src="img/port/chai.png" class="port-img">
               </a>
             </div><!--col-sm-* end-->
-            <div class="col-sm-2" style="text-align:center;">
+            <div class="col-sm-2 text-center">
               <a href="http://hopwit.me" target="_blank">
-                <img src="img/port/hopwit.svg" class="port-img" style="margin-top: -8px; width: 90%;">
+                <img src="img/port/hopwit.png" class="port-img">
               </a>
             </div><!--col-sm-* end-->
             <div class="col-sm-2">
               <a href="http://chalknpaper.com" target="_blank">
-                <img src="img/port/cnp.png" class="port-img" style="margin-top:10px;">
+                <img src="img/port/cnp.png" class="port-img">
               </a>
             </div><!--col-sm-* end-->
           </div><!--row end-->
@@ -287,7 +285,20 @@
       </div><!--container end-->
     </div><!--jumbo6 end-->
 
-
+    <!--JS-->
+    <script src="js/jquery.2.0.3.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/smoothscroll.js"></script>
+    <script type="text/javascript" src="js/smagic/TweenMax.min.js"></script>
+    <script type="text/javascript" src="js/smagic/jquery.scrollmagic.min.js"></script>
+    <!-- <script type="text/javascript" src="js/smagic/jquery.scrollmagic.debug.js"></script> -->
+    <script>
+      var controller;
+      $(document).ready(function($) {
+        // init controller
+        controller = new ScrollMagic();
+      });
+    </script>
     <script type="text/javascript" src="js/animation.js"></script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
