--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@ _____    _____|  |____  _  _|__| ____
 (____  /____  >___|  /\/\_/ |__|___|  /
      \/     \/     \/               \/
 
+Crafted with ❤ in Bangalore, India.
 @ashwinkshenoy
 
  -->
@@ -20,6 +21,21 @@ _____    _____|  |____  _  _|__| ____
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <!--JS-->
+    <script src="js/jquery.2.0.3.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/smoothscroll.js"></script>
+    <script type="text/javascript" src="js/smagic/TweenMax.min.js"></script>
+    <script type="text/javascript" src="js/smagic/jquery.scrollmagic.min.js"></script>
+    <!-- <script type="text/javascript" src="js/smagic/jquery.scrollmagic.debug.js"></script> -->
+    <script>
+      var controller;
+      $(document).ready(function($) {
+        // init controller
+        controller = new ScrollMagic();
+      });
+    </script>
+    <script type="text/javascript" src="js/animation.js"></script>
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -28,7 +44,6 @@ _____    _____|  |____  _  _|__| ____
     <![endif]-->
   </head>
   <body id="body">
-
 
     <div class="dots">
       <span class="d1">&#9632;</span>
@@ -285,21 +300,6 @@ _____    _____|  |____  _  _|__| ____
       </div><!--container end-->
     </div><!--jumbo6 end-->
 
-    <!--JS-->
-    <script src="js/jquery.2.0.3.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/smoothscroll.js"></script>
-    <script type="text/javascript" src="js/smagic/TweenMax.min.js"></script>
-    <script type="text/javascript" src="js/smagic/jquery.scrollmagic.min.js"></script>
-    <!-- <script type="text/javascript" src="js/smagic/jquery.scrollmagic.debug.js"></script> -->
-    <script>
-      var controller;
-      $(document).ready(function($) {
-        // init controller
-        controller = new ScrollMagic();
-      });
-    </script>
-    <script type="text/javascript" src="js/animation.js"></script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -309,5 +309,6 @@ _____    _____|  |____  _  _|__| ____
       ga('create', 'UA-66024241-4', 'auto');
       ga('send', 'pageview');
     </script>
+
   </body>
 </html>
