--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ Crafted with ❤ in Bangalore, India.
               </a>
             </div><!--col-sm-* end-->
             <div class="col-sm-2">
-              <a href="http://www.hyperlocalleague.in" target="_blank">
+              <a href="http://www.hyperlocalleague.com" target="_blank">
                 <img src="img/port/hll.png" class="port-img">
               </a>
             </div><!--col-sm-* end-->
