--- a/index.html
+++ b/index.html
@@ -35,6 +35,13 @@ Crafted with ❤ in Bangalore, India.
         controller = new ScrollMagic();
       });
     </script>
+    <script type="text/javascript">
+      <!--
+      if (screen.width <= 699) {
+        document.location = "app.html";
+      }
+      //-->
+    </script>
     <script type="text/javascript" src="js/animation.js"></script>
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
