New mobile changes

--- a/app.html
+++ b/app.html
@@ -12,7 +12,7 @@ Crafted with ❤ in Bangalore, India.
 
  -->
 
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en" manifest="example.appcache">
   <head>
     <title>Ashwin K Shenoy</title>
     <meta name="mobile-web-app-capable" content="yes">
@@ -20,12 +20,12 @@ Crafted with ❤ in Bangalore, India.
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name=viewport content="width=device-width, initial-scale=1 ,user-scalable=no">
     <!-- CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
+    <link rel="stylesheet" href="css/materialize.min.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/app.css">
     <!--JS-->
-    <script src="js/jquery.2.0.3.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
+    <!-- <script src="js/jquery.2.0.3.js"></script> -->
+    <!-- <script src="js/materialize.min.js"></script> -->
     <script src="js/app.js"></script>
     <script type="text/javascript">
       <!--
