New mobile changes

--- a/app.html
+++ b/app.html
@@ -12,7 +12,7 @@ Crafted with ❤ in Bangalore, India.
 
  -->
 
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" manifest="example.appcache">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
   <head>
     <title>Ashwin K Shenoy</title>
     <meta name="mobile-web-app-capable" content="yes">
@@ -28,11 +28,11 @@ Crafted with ❤ in Bangalore, India.
     <!-- <script src="js/materialize.min.js"></script> -->
     <script src="js/app.js"></script>
     <script type="text/javascript">
-      <!--
-      if (screen.width >= 699) {
-        document.location = "index.html";
-      }
-      //-->
+      // <!--
+      // if (screen.width >= 699) {
+      //   document.location = "index.html";
+      // }
+      // //-->
     </script>
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
