--- a/app.html
+++ b/app.html
@@ -26,13 +26,13 @@ Crafted with ❤ in Bangalore, India.
     <!--JS-->
     <!-- <script src="js/jquery.2.0.3.js"></script> -->
     <!-- <script src="js/materialize.min.js"></script> -->
-    <script src="js/app.js"></script>
+    <!-- <script src="js/app.js"></script> -->
     <script type="text/javascript">
-      // <!--
-      // if (screen.width >= 699) {
-      //   document.location = "index.html";
-      // }
-      // //-->
+      <!--
+      if (screen.width >= 699) {
+        document.location = "index.html";
+      }
+      //-->
     </script>
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
