--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ Crafted with ❤ in Bangalore, India.
               </a>
             </div><!--col-sm-* end-->
             <div class="col-sm-2 text-center">
-              <a href="http://www.getlevo.com" target="_blank">
+              <a href="http://dev.foofys.com/levo" target="_blank">
                 <img src="img/port/levo.png" class="port-img">
               </a>
             </div><!--col-sm-* end-->
