--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@ Crafted with ❤ in Bangalore, India.
         <div class="section5 text-center">
           <span class="sec5-hd" id="sec5-hd">Check out TerBot</span>
           <br><br>
-          <a href="http://ashwinshenoy.com/bot">
+          <a href="https://ashwinkshenoy.github.io/bot/">
             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="robot" x="0" y="0" viewBox="0 0 600 800" enable-background="new 0 0 600 800" xml:space="preserve">
               <ellipse id="shadow" opacity="0.4" fill="#2C3332" cx="300" cy="703.4" rx="89" ry="30.6"/>
               <g id="left_arm">
