--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@ Crafted with ❤ in Bangalore, India.
     <div class="jumbo3 jumbotron">
       <div class="container">
         <div class="section3">
-          <center>
-            <span class="sec3-hd" id="sec3-hd">Some of my Latest work</span>
+          <div class="text-center">
+            <span class="sec3-hd" id="sec3-hd">Some of my latest work</span>
             <br><br><br><br>
-          </center>
+          </div>
           <div class="row" id="box1">
             <div class="col-md-myoffset-1 col-sm-2">
               <a href="http://www.huzzpa.com" target="_blank">
@@ -104,18 +104,18 @@ Crafted with ❤ in Bangalore, India.
               </a>
             </div><!--col-sm-* end-->
             <div class="col-sm-2">
-              <a href="http://talocity.in" target="_blank">
-                <img src="img/port/talocity.png" class="port-img">
-              </a>
-            </div><!--col-sm-* end-->
-            <div class="col-sm-2 text-center">
-              <a href="http://www.dntsnoop.me" target="_blank">
-                <img src="img/port/snoop.png" class="port-img">
+              <a href="http://www.mypr.io" target="_blank">
+                <img src="img/port/mypr.png" class="port-img">
               </a>
             </div><!--col-sm-* end-->
             <div class="col-sm-2">
-              <a href="http://www.mypr.io" target="_blank">
-                <img src="img/port/mypr.png" class="port-img">
+              <a href="http://britannia.herokuapp.com" target="_blank">
+                <img src="img/port/goodday.png" class="port-img">
+              </a>
+            </div><!--col-sm-* end-->
+            <div class="col-sm-2 text-center">
+              <a href="http://dev.foofys.com/snoop" target="_blank">
+                <img src="img/port/snoop.png" class="port-img">
               </a>
             </div><!--col-sm-* end-->
             <div class="col-sm-2">
@@ -159,8 +159,8 @@ Crafted with ❤ in Bangalore, India.
 
           <div class="row" id="box3">
             <div class="col-md-myoffset-1 col-sm-2 text-center">
-              <a href="http://www.pranahealthcare.co.in" target="_blank">
-                <img src="img/port/prana.png" class="port-img" style="">
+              <a href="http://dev.foofys.com/lekaraao" target="_blank">
+                <img src="img/port/lekar.png" class="port-img" style="">
               </a>
             </div><!--col-sm-* end-->
             <div class="col-sm-2 text-center">
@@ -184,6 +184,10 @@ Crafted with ❤ in Bangalore, India.
               </a>
             </div><!--col-sm-* end-->
           </div><!--row end-->
+          <div class="text-center">
+            <br><br><br><br>
+            <span class="sec3-hd" id="sec3-hd2">and many more...</span>
+          </div>
         </div><!--section3 end-->
       </div><!--container end-->
     </div><!--jumbo3 end-->
