--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@ Crafted with ❤ in Bangalore, India.
     <title>Ashwin K Shenoy</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name=viewport content="width=device-width, initial-scale=1 ,user-scalable=no">
+    <link rel="icon" type="image/png" href="img/favicon.png">
     <!-- CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
